--- a/src/style.scss
+++ b/src/style.scss
@@ -2,8 +2,12 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
+}
+
+p {
+  margin: 0;
 }
