--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
+
+  * {
+    box-sizing: border-box;
+  }
 }
 
 p {
