fix/layout-fixes (#9)
* Remove log

* Click outside working

* SearchBar style fixes

* Loading indicator

* Modal mobile fixes

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 $white: #fff;
 $black: #000;
 $blue: #2c4cff;
+$blue-dark: #1b30a8;
 
 $gray-1: #fafafa;
 $gray-2: #f1f1f1;
@@ -9,3 +10,6 @@ $gray-4: #adb5bd;
 $gray-5: #909090;
 $gray-6: #757575;
 $gray-7: #505050;
+
+$mobile-bp: 37.5em;
+$tablet-bp: 48em;
